<resources>
    <string name="api_license_key" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAx6V9v+GgzlL/lVrxGouhD41qClKjjc5DZGYtG+s993SzJqmPD7CgO0HfRYXUdCSy9XDOzgO8FfbZ12cylYlgcR03Uh41snoxViu/ViuzXuoR1IMMpvyUVPL1Rd1gdX37vYX0To7r+5Qy+yNj8nYN4b8YFJlkhXPRX8GNzA8oBW6hvV5aGnNmaWCyRlYQ1WZ2zrdDAh8/o3NPvhTFvRc1jsbR8tkeAwHr51TCQZ2hG3FEvkDlJkIL6w9aMOKZgalRoyJ/4s0YUWlGhgrhoZRWPAvDt6HWk8G/UUCzZ/FGtif0vLDR0mXseFo9ilFhZlqqC3Mtzv+62m0/dTQ6mHX7LQIDAQAB</string>
    <string name="url_download" translatable="false">http://sd-97857.dedibox.fr/owncloud/index.php/s/</string>
    <string name="app_name" translatable="false">Yomikata Z</string>
    <string name="db_path" translatable="false">/data/data/com.jehutyno.yomikata/databases/</string>
    <string name="db_name_yomi" translatable="false">Japanese.db</string>
    <string name="google_tts_uri" translatable="false">market://details?id=com.google.android.tts</string>
    <string name="yomiakataz_drawer" translatable="false">読み方 Z %1$s</string>
    <string name="home_title" translatable="false">Yomikata Z</string>
    <string name="drawer_your_selections">Your selections</string>
    <string name="drawer_dictionary">Dictionary</string>
    <string name="drawer_hiragana" translatable="false">Hiragana</string>
    <string name="drawer_katakana" translatable="false">Katakana</string>
    <string name="drawer_kanji_beginner">Kanji Beginner</string>
    <string name="drawer_counters">Counters</string>
    <string name="drawer_jlpt5" translatable="false">JLPT 5</string>
    <string name="drawer_jlpt4" translatable="false">JLPT 4</string>
    <string name="drawer_jlpt3" translatable="false">JLPT 3</string>
    <string name="drawer_jlpt2" translatable="false">JLPT 2</string>
    <string name="drawer_jlpt1" translatable="false">JLPT 1</string>
    <string name="action_delete">Delete</string>
    <string name="no_selections">No selections</string>
    <string name="new_selection">New selection</string>
    <string name="selection_name">Selection\'s name</string>
    <string name="selection_edit">Edit the selection</string>
    <string name="selection_delete_sure">Are you sure you want to delete this selection?</string>
    <string name="selection_not_empty_name">The name can\'t be empty</string>
    <string name="action_search">Search</string>
    <string name="action_errors">Errors</string>
    <string name="quiz_input_hint">Enter colored sign pronunciation</string>
    <string name="practice_random">Practice all randomly</string>
    <string name="practice_normal">Practice all</string>
    <string name="practice_progressive">Practice progressively</string>
    <string name="quit_quiz">Do you want to quit this quiz session ?</string>
    <string name="search_title">Search Results</string>
    <string name="email_contact" translatable="false">yomikata.contact@gmail.com</string>
    <string name="mail_chooser">Contact me by email</string>
    <string name="error_mail_chooser">Send error report email</string>
    <string name="error_mail_subject">Yomikata Z database error</string>
    <string name="error_mail_body_1">Potential database error\n </string>
    <string name="error_mail_comments">\nAdditional comments:\n</string>
    <string name="mail_error">There are no email clients installed.</string>
    <string name="answer_title">Review of answers</string>
    <string name="adjust_volume_tts">Don\'t forget to adjust the volume for this type of quiz</string>
    <string name="go_settings">Settings</string>
    <string name="action_not_possible">Sorry this action is not possible on your device</string>
    <string name="tts_init_failed">TTS Initilization Failed</string>
    <string name="set_up_tts_title">Speech Setup</string>
    <string name="set_up_tts">To enable speech you need to either:\n</string>
    <string name="download_voices_action">Download the voices (%dMB)</string>
    <string name="get_google_tts_action">Install Google Text to speech</string>
    <string name="tuto_yomikataz" translatable="false">Yomikata Z</string>
    <string name="tuto_welcome">Be ready to learn Japanese</string>
    <string name="tuto_categories">Categories</string>
    <string name="tuto_categories_message">Choose Hiragana, Katakana, or any level of Kanji from the menu</string>
    <string name="tuto_chat">Assistance</string>
    <string name="tuto_chat_message">Don\'t hesitate to browse the help or to chat with me if you need any assistance or have any question</string>
    <string name="tuto_quiz_type">Quiz Type</string>
    <string name="tuto_quiz_type_message">Choose one or several type of quizzes</string>
    <string name="tuto_quiz_type_details_message">Choose between Pronunciation MCQ, Translation MCQ, vocal MCQ, Pronunciation Quiz or Automated selection of all those Quiz</string>
    <string name="tuto_progress">Progress</string>
    <string name="tuto_progress_message">Every words has a level from red to green depending of your success rate</string>
    <string name="tuto_part_selection">Part Selection</string>
    <string name="tuto_part_selection_message">Select which part you want to practice. You\'ll practice everything if you don\'t select any part</string>
    <string name="tuto_start">Go !</string>
    <string name="tuto_start_message">Start to practice all the words one by one or progressively</string>
    <string name="tuto_furigana">Furigana</string>
    <string name="tuto_furigana_message">Display or not the pronunciation of other words in the sentence</string>
    <string name="tuto_translation">Translation</string>
    <string name="tuto_translation_message">Display or not the translation of the current sentence</string>
    <string name="tuto_selection">Selections</string>
    <string name="tuto_selection_message">Add this updateWord to a custom selection of words</string>
    <string name="tuto_report">Report</string>
    <string name="tuto_report_message">Report an issue with this updateWord to the developer</string>
    <string name="tuto_audio">Audio</string>
    <string name="tuto_audio_message">Play the sentence with the vocal synthesizer</string>
    <string name="tuto_answer">Answer</string>
    <string name="tuto_answer_message">Choose one of the answer</string>
    <string name="tuto_errors">Errors</string>
    <string name="tuto_answers_message">Check the answers you gave during the session</string>
    <string name="error_no_quiz_no_word">At least one quiz with one updateWord must exist</string>
    <string name="menu_night_mode">Night mode</string>
    <string name="alert_quiz_finished">You have seen all the words. What do you want to do ?</string>
    <string name="alert_session_finished">You finished a session of %1$d words. What do you want to do ?</string>
    <string name="alert_restart">restart</string>
    <string name="alert_continue">continue</string>
    <string name="alert_quit">quit</string>
    <string name="alert_review_session_errors">review session errors</string>
    <string name="alert_review_quiz_errors">review all quiz errors</string>
    <string name="quit_app">Do you want to quit Yomikata?</string>
    <string name="prefs_others">Others</string>
    <string name="prefs_privacy_policy">Privacy Policy</string>
    <string name="prefs_backup_restore">Backup and Restore</string>
    <string name="prefs_backup_progress">Backup progress</string>
    <string name="prefs_restore_progress">Restore progress</string>
    <string name="prefs_restore_progress_short">Restore progress</string>
    <string name="prefs_restore_sure">Are you sure you want to restore those data ? It will erase your current progress</string>
    <string name="restoring_progress">Restoring your backup</string>
    <string name="backup_progress">Creating a backup</string>
    <string name="backup_success">Backup success</string>
    <string name="backup_saved_here">Your data have been saved at this location: \n%1$s\n\nYou can restore the data at any time or send it to another device</string>
    <string name="backup_error">Backup error</string>
    <string name="backup_error_message">Check that you have storage permission and enough space</string>
    <string name="migrating">Migrating your database</string>
    <string name="may_take_a_while">This may take a while…</string>
    <string name="restore_success">Restore data success</string>
    <string name="restore_success_message">Your data has been restored successfully !</string>
    <string name="restore_error">Restore data error</string>
    <string name="restore_error_message">Something occurred during the restoration of tha data</string>
    <string name="ask_to_restart">Please restart the app to reload your data</string>
    <string name="settings">Settings</string>
    <string name="settings_restore_header">Save your progress or restore it from a file coming from this application or from Yomikata</string>
    <string name="select_dir">Select</string>
    <string name="choose_file">Select Your Yomikata Z Database File</string>
    <string name="ok">OK</string>
    <string name="progress_import_title">Import Progress</string>
    <string name="progress_import_message_y">You progression from Yomikata is being imported</string>
    <string name="progress_import_message_yz">You progression from Yomikata Z is being imported</string>
    <string name="backup">Backup</string>
    <string name="backup_sure">If you do this backup it will erase any previous backup. Are you sure you want to do it?</string>
    <string name="invalid_file">Invalid file</string>
    <string name="use_yomikata_file">Please use a file from Yomikata (.yomikata) or from Yomikata Z (.yomikataz)</string>
    <string name="prefs_tutorials">Tutorials</string>
    <string name="prefs_reset_tutorials">Reset tutorials</string>
    <string name="tutos_pronunciation_mcq">Pronunciation MCQ</string>
    <string name="tutos_pronunciation_mcq_message">Multiple choice questioner on the pronunciation</string>
    <string name="tutos_pronunciation_quiz">Pronunciation Quiz</string>
    <string name="tutos_pronunciation_quiz_message">Quiz where you type the pronunciation of the display updateWord</string>
    <string name="tutos_audio_quiz">Audio Quiz</string>
    <string name="tutos_audio_quiz_message">You hear a updateWord and have to choose the good writing</string>
    <string name="tutos_en_jp">English to Japanese</string>
    <string name="tutos_en_jp_message">Choose the correct translation</string>
    <string name="tutos_jp_en">Japanese to English</string>
    <string name="tutos_jp_en_message">Choose the correct translation</string>
    <string name="tutos_auto_quiz">Auto Quiz</string>
    <string name="tts_settings_title">Speech settings</string>
    <string name="tts_volume">Speech Volume</string>
    <string name="tts_rate">Speech rate</string>
    <string name="share_choose">Share the app</string>
    <string name="tap_to_reveal_choices">Tap to reveal choices</string>
    <string name="translate_to_english_hint">Translate to English</string>
    <string name="check_mark_description">correct</string>
    <string name="reset_volume">reset volume</string>
    <string name="reset_speech_rate">reset speech rate</string>
    <string name="close">close</string>
    <string name="yomikata_z_logo">Yomikata Z logo</string>
    <string name="discord" translatable="false">discord</string>
    <string name="google_play_store" translatable="false">google play store</string>
    <string name="facebook" translatable="false">facebook</string>
    <string name="sentence_audio">Sentence audio</string>
    <string name="selections">Selections</string>
    <string name="report_error">Report error</string>
    <string name="word_audio">Word audio</string>
    <string name="show_furigana">Show furigana</string>
    <string name="show_translation">Show translation</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
</resources>