<?xml version="1.0" encoding="utf-8"?>
<developer.shivam.crescento.CrescentoContainer xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:id="@+id/crescentoContainer"
                                             android:layout_width="match_parent"
                                             android:layout_height="200dp"
                                             android:elevation="4dp"
                                             app:curvature="40dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkGray"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginBottom="-20dp"
        android:layout_marginStart="-20dp"
        android:adjustViewBounds="false"
        android:scaleType="fitStart"
        android:src="@drawable/yomi_logo"
        android:contentDescription="@string/yomikata_z_logo" />

    <ImageView
        android:id="@+id/discord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_toStartOf="@+id/facebook"
        android:focusable="true"
        android:clickable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_discord"
        android:contentDescription="@string/discord" />

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_alignParentEnd="true"
        android:focusable="true"
        android:clickable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_facebook"
        android:contentDescription="@string/facebook" />

    <ImageView
        android:id="@+id/play_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/facebook"
        android:layout_toStartOf="@+id/share"
        android:focusable="true"
        android:clickable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_google_play"
        android:contentDescription="@string/google_play_store" />

    <ImageView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/facebook"
        android:focusable="true"
        android:clickable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_share"
        android:contentDescription="@string/share_choose" />


    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="40dp"
        android:padding="10dp"
        android:text="@string/yomiakataz_drawer"
        android:textColor="@color/gray"/>

</developer.shivam.crescento.CrescentoContainer>