<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical">

    <FrameLayout
        android:id="@+id/quiz_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/answer_container">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".screens.quiz.QuizActivity"/>

        <ImageView
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0"
            android:src="@drawable/ic_check_black_48dp"
            android:visibility="gone"
            android:contentDescription="@string/check_mark_description"/>

        <RelativeLayout
            android:id="@+id/settings_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:orientation="vertical"
            android:padding="12dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/settings_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tts_settings_title"/>

            <TextView
                android:id="@+id/settings_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_title"
                android:layout_marginBottom="4dp"
                android:text="@string/tts_volume"
                android:textColor="@color/colorAccent"/>

            <LinearLayout
                android:id="@+id/volume_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_volume"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/seek_volume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>

                <ImageButton
                    android:id="@+id/reset_volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_backup_restore"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:contentDescription="@string/reset_volume"/>

            </LinearLayout>

            <TextView
                android:id="@+id/settings_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/volume_layout"
                android:layout_marginBottom="4dp"
                android:text="@string/tts_rate"
                android:textColor="@color/colorAccent"/>

            <LinearLayout
                android:id="@+id/speed_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_speed"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/seek_speed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>

                <ImageButton
                    android:id="@+id/reset_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_backup_restore"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:contentDescription="@string/reset_speech_rate"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/settings_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_clear_orange_24dp"
                android:contentDescription="@string/close" />

        </RelativeLayout>

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/answer_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/quiz_answer_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lighter_gray"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/translate_to_english_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginVertical="10dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quiz_answer_type">

            <include
                android:id="@+id/quiz_answers_keyboard_entry"
                layout="@layout/quiz_answers_keyboard_entry"/>

            <include
                android:id="@+id/quiz_answers_multiple_choice"
                layout="@layout/quiz_answers_multiple_choice"/>

            <TextView
                android:id="@+id/tap_to_reveal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/lighter_gray"
                android:textSize="22sp"
                android:background="@drawable/rounded_bg"
                android:gravity="center"
                android:text="@string/tap_to_reveal_choices"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:visibility="gone"/>

        </FrameLayout>

    </RelativeLayout>

</RelativeLayout>